# Slide_Maker

./: Makefile  TODO
CLI/: CMakeLists.txt  Command.h  Command.inl  CommandCreator.h  CommandCreator.inl  DigitsValidator.h  DigitsValidator.inl  Exception.inl  FunctionArgument.h  InvalidCharacter_Cerr.h  InvalidCharacter_Cerr.inl  InvalidSyntax_Cerr.h  InvalidSyntax_Cerr.inl  Invalid_CharacterValidator.h  Makefile  Parser.h  Parser.inl  TokenValidator.h  TokenValidator.inl  UserInteractor.h  main.cpp  parser_program
CLI/CommandFactory/: Command.cpp  Command.h  Command.inl  CommandCreator.cpp  CommandCreator.h  CommandCreator.inl  CommandInfo.cpp  CommandInfo.h  FunctionArgument.h  FunctionArgument.inl  InvalidArgument_Cerr.h  InvalidArument_Cerr.inl  InvalidCommand_Cerr.h  InvalidCommand_Cerr.inl  InvalidOption_Cerr.h  InvalidOption_Cerr.inl  SlideMaker.cpp  SlideMaker.h  SlideMaker.inl
CLI/Controller/: Controller.cpp  Controller.h  Controller.inl  Initializer.cpp  Initializer.h  main.cpp
CLI/Exception/: Exception.h  InvalidArgument_Cerr.cpp  InvalidArgument_Cerr.h  InvalidCharacter_Cerr.cpp  InvalidCharacter_Cerr.h  InvalidCommand_Cerr.cpp  InvalidCommand_Cerr.h  InvalidOption_Cerr.cpp  InvalidOption_Cerr.h  InvalidSyntax_Cerr.cpp  InvalidSyntax_Cerr.h  InvalidSyntax_Cerr.inl
CLI/Include/: Include.h
CLI/Parser/: Parser.cpp  Parser.h  Parser.inl  Types.h
CLI/debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  power
COMMANDER/: CLI_Interactor.h  Commander.h  Editor_Interactor.h  GUI_Interactor.h  Interactor.h  Vis_Interactor.h
Document/: Attributes.h  CMakeLists.txt  Geometry.h  Item.h  Slide.h  Storage.h  Type.h  main.cpp
Document/Attributes/: I_Attributes.cpp  TextBox_Attr.cpp  TextBox_Attr.h
Document/Doc_Exceptions/: Exception.cpp  InvalidAttribute_Cerr.cpp  InvalidIndex_Cerr.cpp
Document/Items/: Item.cpp  TextBox.cpp
Document/Slide/: Slide.cpp
Document/Storage/: Storage.cpp  Storage.h
Document/document/: Exception.cpp  I_Attributes.cpp  I_Attributes.h  InvalidAttribute_Cerr.cpp  InvalidAttribute_Cerr.h  InvalidIndex_Cerr.cpp  Item.cpp  Item.h  ItemFactory.h  Slide.cpp  Slide.h  TextBox.cpp  TextBox.h  TextBox_Attr.h  main.cpp
Edition/: Adder.h  Builder.h  Editor.h  Item_Info.h
Include/: Exception.h  I_Attributes.h  InvalidAttribute_Cerr.h  InvalidIndex_Cerr.h  Item.h  Slide.h
MODEL/: Item.h  Slide.h  Storage.h  Type.h
VISUALIZATION/: VIsualizer.h
model/: Attributes.h  Geometry.h  Storage.h
textFiles/: Connections.odp  Menu_Core
